Fixing Pointing Command Sequence Generation and questionnaire